--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Weather App</string>
     <string name="weather_condition">Weather Condition</string>
+    <string name="settings">Settings</string>
 </resources>
