--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,9 @@
     <string name="icon_representing_current_weather">Icon representing current weather</string>
     <string name="no_internet_connection">No Internet Connection</string>
 
+    <string name="degree_symbol">%s\u00B0</string>
+    <string name="generic_name">Hello %s</string>
+
     <string-array name="pref_units_entries">
         <item>Metric</item>
         <item>Imperial</item>
