--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="open_navigation_drawer">Open Navigation Drawer</string>
     <string name="close_navigation_drawer">Close Navigation Drawer</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="icon_representing_current_weather">Icon representing current weather</string>
     <string name="no_internet_connection">No Internet Connection</string>
 
@@ -25,4 +24,6 @@
         <item>Metric</item>
         <item>Imperial</item>
     </string-array>
+
+    <string name="pref_location_default_value">London</string>
 </resources>
