Showed not found state when weather information was not found

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
 
     <string name="pref_location_default_value">London</string>
     <string name="please_check_your_internet_connection_and_try_again">Please Check Your Internet Connection And Try Again</string>
+    <string name="error">Error</string>
 </resources>
