--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="pref_location_default_value">London</string>
     <string name="please_check_your_internet_connection_and_try_again">Please Check Your Internet Connection And Try Again</string>
     <string name="error">Error</string>
+    <string name="home">Home</string>
 </resources>
